--- a/estilo/style.css
+++ b/estilo/style.css
@@ -136,7 +136,7 @@ aside > ul{
 footer{
     background-color: var(--cor5);
     color: white;
-    margin: 15px;
+    margin: auto;
     text-align: center;
     font-family: var(--font-android);
 }
